--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BankX High Fidelity Prototype</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron:500,700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
